[gd_scene load_steps=8 format=3 uid="uid://bnj4r1dds2m88"]

[ext_resource type="Material" uid="uid://dykh6lk1hfo2u" path="res://Menu Shaders/Asset_Color.tres" id="1_7ykpt"]
[ext_resource type="Script" path="res://Menu Scripts/advanced_menu.gd" id="1_h4asb"]
[ext_resource type="Texture2D" uid="uid://r0x5i2s0vspc" path="res://Menu Assets/Selection Title.png" id="2_xibpe"]
[ext_resource type="Texture2D" uid="uid://baxgt8gltobrw" path="res://Menu Assets/Back (1).png" id="3_xibpe"]
[ext_resource type="Texture2D" uid="uid://4vgsdvadyr57" path="res://Menu Assets/Play.png" id="4_yww8e"]
[ext_resource type="FontFile" uid="uid://bsdm1pj7st7rm" path="res://Font/Modular Amplitude.otf" id="5_nqdss"]
[ext_resource type="AudioStream" uid="uid://dk57nyfbj42mm" path="res://Audio/select_sound.wav" id="7_8dq57"]

[node name="advanced_menu" type="Control"]
layout_mode = 3
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h4asb")

[node name="SelectionTitle" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -431.0
offset_right = 431.0
offset_bottom = 192.0
grow_horizontal = 2

[node name="TextureRect" type="TextureRect" parent="SelectionTitle"]
material = ExtResource("1_7ykpt")
layout_mode = 2
texture = ExtResource("2_xibpe")

[node name="Back" type="TouchScreenButton" parent="."]
material = ExtResource("1_7ykpt")
position = Vector2(133, 45)
scale = Vector2(0.554455, 0.554455)
texture_normal = ExtResource("3_xibpe")

[node name="Play" type="TouchScreenButton" parent="."]
material = ExtResource("1_7ykpt")
position = Vector2(128, 328)
scale = Vector2(0.916, 0.916)
texture_normal = ExtResource("4_yww8e")

[node name="Free" type="Button" parent="."]
offset_left = 280.0
offset_top = 872.0
offset_right = 645.0
offset_bottom = 1012.0
scale = Vector2(0.609104, 0.609104)
theme_override_fonts/font = ExtResource("5_nqdss")
theme_override_font_sizes/font_size = 126
text = "FREE"

[node name="Advanced" type="Button" parent="."]
offset_left = 160.0
offset_top = 960.0
offset_right = 943.0
offset_bottom = 1100.0
scale = Vector2(0.609104, 0.609104)
theme_override_fonts/font = ExtResource("5_nqdss")
theme_override_font_sizes/font_size = 126
text = "ADVANCED"

[node name="ClickSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_8dq57")

[node name="AdvancedLessonSelect" type="Control" parent="."]
anchors_preset = 0
offset_left = 848.0
offset_top = 304.0
offset_right = 1272.0
offset_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="AdvancedLessonSelect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlaceholderButton" type="Button" parent="AdvancedLessonSelect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_nqdss")
theme_override_font_sizes/font_size = 96
text = "PLACEHOLDER"

[node name="PlaceholderButton2" type="Button" parent="AdvancedLessonSelect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_nqdss")
theme_override_font_sizes/font_size = 96
text = "PLACEHOLDER"

[node name="PlaceholderButton3" type="Button" parent="AdvancedLessonSelect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_nqdss")
theme_override_font_sizes/font_size = 96
text = "PLACEHOLDER"

[node name="PlaceholderButton4" type="Button" parent="AdvancedLessonSelect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_nqdss")
theme_override_font_sizes/font_size = 96
text = "PLACEHOLDER"

[node name="PlaceholderButton5" type="Button" parent="AdvancedLessonSelect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_nqdss")
theme_override_font_sizes/font_size = 96
text = "PLACEHOLDER"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Free" to="." method="_on_free_pressed"]
